--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p>Nice to meet you. Let's get to know each other!</p>
         <button class="heart-button" onclick="askName()">Click me 🩷 </button>
         <br>
-        <a href="https://www.instagram.com/inu_ll" target="_blank">Follow me on Instagram</a>
+        <a href="https://www.instagram.com/inu._.ll" target="_blank">Follow me on Instagram</a>
         <br>
         <a href="https://blog.naver.com/klwbty" target="_blank">Check out my Blog</a>
         <br>
